kadai_015をアップロード

--- a/kadai_015/kadai_015.html
+++ b/kadai_015/kadai_015.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>;
   <title>15章課題</title>
   <meta charset="UTF-8">
   <meta name="description" content="このページは15章の課題です。">
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-</head>
+  </head>
 <body>
   <h1><span class="blue">M</span>Y<span class="pink">P</span>ROFILE</h1>
   <div id="basic">
