--- a/kadai_015/kadai_015.html
+++ b/kadai_015/kadai_015.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>;
+<head>
   <title>15章課題</title>
   <meta charset="UTF-8">
   <meta name="description" content="このページは15章の課題です。">
